<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly.
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="brightness">Brightness</string>
    <string name="measure_instruction">Put strip on black area with colour patches to the left. Hold camera above colour card until measurement is complete.</string>
    <string name="imageQuality">Image quality</string>
    <string name="prepare_test">Prepare for test</string>
    <string name="taking_photo">Taking photo</string>
    <string name="waiting">Waiting</string>
    <string name="success_quality_checks">Success! Quality check passed</string>
    <string name="stripTest">Strip Test</string>
    <string name="no_result">No result</string>
    <string name="continue_anyway">Continue anyway</string>
    <string name="just_a_moment">Just a moment…</string>
    <string name="checking_image_quality">Checking image quality</string>
    <string name="seconds">Sec.</string>
    <string name="detecting_color_card">Looking for colour card</string>
    <string name="no_strip_found">No strip found</string>
    <string name="ready_for_photo">Ready for photo</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="stop_test">Stop test</string>
    <string name="camera_not_good">The camera does not meet the minimum requirements.\n\nFor best results, at least 8 megapixel camera required.</string>
    <string name="tilt_camera_in_direction">Tilt camera in direction of arrow</string>
    <string name="move_camera_closer">Move camera closer to the card</string>
    <string name="avoid_shadows_on_card">Please avoid shadows on the card</string>
    <string name="prepare_camera_instruction">Don\'t take sample yet. Hold camera above colour card and adjust position until check succeeds.</string>

    <!--Water-->
    <string name="place_strip_clr_hg_1"><b>Place a clean test strip below the used test strip so that patch has a white background.</b></string>
    <string name="place_strip_clr_hg_2">Place the stacked strips with the patch facing <b>left</b> on the black area of the Colour Reference Card and press <b>Start</b>.</string>
    <string name="as_safety_1"><b>DANGER:</b> Hydrogen and arsine gases are generated during the test. Work in a well-ventilated area away from open flames and other sources of ignition.</string>
    <string name="as_safety_2">Review Material Safety Data Sheets for safe handling, storage and disposal information. Dispose of in accordance with local regulations. Dispose of waste in accordance with environmental legislation.</string>
    <string name="as_ins_1a">Insert a test strip into the cap so the pad completely covers the small opening.</string>
    <string name="as_ins_1b">Close the flap and press to secure.</string>
    <string name="as_ins_7a">Fill the square measuring vial to the top with sample (9.6 mL).</string>
    <string name="as_ins_7b">Pour the sample into the reaction bottle.</string>
    <string name="as_ins_3a">Add one <b>Reagent #1</b>.</string>
    <string name="as_ins_3b">If a rotten egg smell is detected after adding reagent #1, sulfide is present at interfering levels, <b>[a topic=sulfide]click here[/a]</b> to see how to remove sulfide before continuing.</string>
    <string name="as_ins_3c">Add one <b>Reagent #2</b> powder pillow to the sample.</string>
    <string name="as_ins_4a">Immediately attach the cap to the reaction bottle.</string>
    <string name="as_ins_4b">Swirl continuously for 60 seconds. <b>Do not shake or invert or allow sample to get on the strip.</b></string>
    <string name="as_ins_5">Wait 20 minutes. Swirl twice during the reaction period.</string>
    <string name="as_ins_6">Remove the test strip from the cap and immediately place the test strip facing <b>left</b> on the Colour Reference Card and press <b>Start</b>.</string>
    <string name="fill_half_with_sample">Fill <b>HALF</b> of the vial with sample water.</string>
    <string name="collect_water_sample">Collect water sample.</string>
    <string name="prepare_sample_ka">Samples containing more than 1500 mg/l K must be diluted with distilled water.</string>
    <string name="prepare_sample_kb">The pH must be within the range 5 – 14. Adjust, if necessary, with calcium hydroxide.</string>
    <string name="finish_ka">Close the reagent bottle and the tube containing the test strips immediately after use.</string>
    <string name="finish_kb">Rinse the test vessel with distilled water only.</string>
    <string name="open_one_foil_and_add_powder">Open one foil packet and add powder contents to vial.</string>
    <string name="cap_vial_and_shake_rapidly">Cap vial and shake rapidly for <b>5 seconds</b>. Remove cap.</string>
    <string name="dip_strip_into_water_and_remove">Dip a strip into sample and remove immediately.</string>
    <string name="dip_strip_in_water_2_seconds">Dip a strip in the sample for at least <b>2 seconds</b> and remove.</string>
    <string name="dip_strip_move_back_forth_15_seconds">Dip the test strip into sample vial and rapidly move back and forth underwater for <b>15 seconds</b>.</string>
    <string name="dip_strip_move_back_forth_30_seconds">Dip the strip into sample and move back and forth for <b>30 seconds</b> in sample.</string>
    <string name="dip_sample_60_back_forward_250_sample">Dip the strip into <b>250+ ml </b> sample and move back and forth for <b>60 seconds</b> in sample.</string>
    <string name="immerse_reaction_zone">Immerse the reaction zone of the test strip in the pretreated sample (15 – 30 °C) for <b>1 second</b></string>
    <string name="dry_off_excess_water_place_on_towel">Dry off excess water. (e.g. place it on a towel)</string>
    <string name="shake_excess_water_once">Shake <b>once </b> the excess water from test strip.</string>
    <string name="do_not_shake_excess_water">Do not shake excess water from the test strip.</string>
    <string name="allow_excess_liquid_to_run_off">Allow excess liquid to run off via the long edge of the strip onto an absorbent paper towel.</string>
    <string name="add_reagent_k1">Add <b>1 drop</b> of <b>reagent K-1</b> on the reaction zone and allow to react for <b>1 minute</b>.</string>
    <string name="fill_bottle_5ml">Fill the provided bottle with <b>5 ml</b> of your water sample.</string>
    <string name="add_10_drops_nh1">Add <b>10 drops</b> of the <b>NH4-1 Reagent</b> to the sample.</string>
    <string name="swirl_and_mix">Swirl the sample to mix the reagent.</string>
    <string name="dip_sample_5s">Dip the test strip into the sample for <b>5 seconds</b> and remove.</string>
    <string name="shake_excess_water_off">Shake excess water from the test strip.</string>
    <string name="place_strip_clr">Place the test strip with the patch facing <b>left</b> on the black area of the Colour Reference Card and press <b>Start</b>.</string>
    <string name="add_5_drops_po4_1">Add <b>5 drops</b> of the <b>PO4-1 Reagent</b> to the sample.</string>
    <string name="place_smaller_container">Place smaller container in the provided rack.</string>
    <string name="add_6_drops_po4_2">Add <b>6 drops</b> of the <b>PO4-2 Reagent</b> to the smaller container.</string>
    <string name="dip_sample_15s">Dip the test strip into the sample for <b>15 seconds</b> and remove.</string>
    <string name="dip_container_15s">Dip the test strip into the smaller tube for <b>15 seconds</b> and remove.</string>
    <string name="dip_sample_1s">Dip the test strip into the sample for <b>1 second</b> and remove.</string>
    <string name="as_ins_2">Fill the reaction bottle with sample to the fill line (50 mL).</string>

    <string name="as_remove_sulfide">Complete the following steps to remove the sulfide before beginning the test procedure:</string>
    <string name="as_remove_sulfide_1">Tear off a small piece of cotton and form a ball the size of a pea.</string>
    <string name="as_remove_sulfide_2">Saturate the cotton with a few drops of lead acetate. Squeeze excess liquid out of the cotton, leaving it damp.</string>
    <string name="as_remove_sulfide_3">Press the saturated cotton ball into the small opening of the reaction bottle cap from the bottom. Be sure that the cotton is firmly in place and that a gap remains between the cotton and the top surface of the cap.</string>
    <string name="as_remove_sulfide_4">Insert the test strip as detailed in step 1 of the 0–500 or 0–4000 ppb test procedure and continue with the test.</string>
    <string name="as_remove_sulfide_note"><b>Note:</b> The lead acetate must not contact the test strip!</string>
    <string name="as_remove_sulfide_wear_gloves">Always wear gloves or wash hands thoroughly after handling lead acetate.</string>

    <!--Soil-->
    <string name="collect_mehlich_extraction_sample">Collect Mehlich extraction sample</string>
    <string name="collect_5ml_mehlich_sample">Collect <b>5 ml</b> Mehlich extraction sample using the provided bottle.</string>
    <string name="collect_water_extraction_sample">Collect water extraction sample</string>
    <string name="dip_strip_15_seconds_and_remove">Dip a strip into sample for <b>15 seconds</b> and remove.</string>

    <string name="wait_30_sec">Hold the strip level for 30 seconds.</string>
    <string name="determine_strip_color">Compare the color of the test strip to the chart provided in the package to determine the test results.</string>
    <string name="take_photo_of_result_strip">Take a photo of the test strip next to the color chart.</string>
</resources>